src-errormsg/E15-LowercaseConstructor/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E15-LowercaseConstructor/Plutarch.hs:35:5: error: [GHC-07626]
    Parse error in pattern: pAmount
   |
35 |     pAmount n -> pfromData n
   |     ^^^^^^^^^
